[package]
name = "proxy-client"
version.workspace = true
edition.workspace = true
authors.workspace = true
description = "Proxy client component"
license.workspace = true

[dependencies]
tokio.workspace = true
anyhow.workspace = true
log.workspace = true
env_logger.workspace = true
bytes.workspace = true
aes.workspace = true
aes-gcm.workspace = true
rand.workspace = true
base64.workspace = true
serde.workspace = true
serde_json.workspace = true
uuid.workspace = true
clap = { version = "4.0", features = ["derive"] } 