[package]
name = "proxy-ws-client"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.8", features = ["ws"] }
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
clap = { version = "4.0", features = ["derive"] }
log = "0.4"
env_logger = "0.11"
uuid = { version = "1.0", features = ["v4"] }
futures-util = "0.3"
tokio-tungstenite = { version = "0.21", features = ["rustls-tls-webpki-roots"] }
url = "2.0"
